--- a/Node/CAP 2/Agencia de carros/.eslintrc.json
+++ b/Node/CAP 2/Agencia de carros/.eslintrc.json
@@ -35,6 +35,7 @@
     "import/prefer-default-export": "off",
     "no-shadow": "off",
     "no-console": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-useless-constructor": "off",
     "no-empty-function": "off",
     "lines-between-class-members": "off",
