financey create modal

--- a/React/CAP 2/Curso 1  - Money/package.json
+++ b/React/CAP 2/Curso 1  - Money/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
-    "polished": "^4.1.1",
+    "miragejs": "^0.1.41",
+    "polished": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
@@ -43,7 +45,9 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^5.1.0",
+    "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "axios-mock-adapter": "^1.19.0",
