--- a/React/CAP 4/dashgo/package.json
+++ b/React/CAP 4/dashgo/package.json
@@ -59,6 +59,7 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
     "styled-components": "5.3.0",
