--- a/React/CAP 4/dashgo/package.json
+++ b/React/CAP 4/dashgo/package.json
@@ -37,6 +37,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@hookform/resolvers": "^2.7.1",
     "@styled-icons/boxicons-regular": "^10.34.0",
     "@styled-icons/boxicons-solid": "^10.34.0",
     "@styled-icons/fa-brands": "^10.34.0",
@@ -63,7 +64,8 @@
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
     "styled-components": "5.3.0",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -92,12 +94,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
     "jest-styled-components": "^7.0.5",
-    "lint-staged": "^11.0.1",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
+  },
+  "resolutions": {
+    "graphql": "^15.5.1"
   }
 }
